--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,8 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 10px;
 }
 
 .profile-image {
@@ -45,4 +47,18 @@ a {
 
 ul {
   list-style-type: none;
+  gap: 10px;
+  padding: 0 10px;
+  justify-content: space-around;
+}
+
+.right-part, .left-part, ul {
+  display: flex;
+}
+
+.right-part {
+  flex: auto;
+  justify-content: flex-end;
+  gap: 15px;
+  align-items: center;
 }
