--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,63 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* Solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.main-page {
+  display: flex;
+  flex: auto;
+}
+
+.sidebar {
+  flex: 0 0 300px;
+}
+
+.content {
+  display: flex;
+  padding: 48px;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.header {
+  padding: 16px;
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  padding: 16px;
+  margin: 0;
+  flex-direction: column;
+  gap: 20px;
+}
+
+a:link { 
+  text-decoration: none; 
+}
+
+li {
+  font-size: 24px;
+
+}
+
+.card {
+  flex: 1 1 300px;
+  padding: 12px;
+}
